Kubernetes/bootstrap/traefik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    name: traefik
    pod-security.kubernetes.io/enforce: privileged
